# ggapi

./: Cargo.toml  LICENSE  README.md
src/: entrant.rs  enums.rs  event.rs  lib.rs  participant.rs  phase.rs  player.rs  structs.rs  tournament.rs  user.rs
src/structs/: action_set.rs  address.rs  bracket_config.rs  character.rs  contact_info.rs  entrant.rs  event.rs  event_owner.rs  event_team.rs  event_tier.rs  game.rs  game_selection.rs  global_team.rs  image.rs  match_config.rs  page_info.rs  participant.rs  phase.rs  phase_group.rs  player_rank.rs  profile_authorization.rs  progression.rs  query.rs  race_bracket_config.rs  race_match_config.rs  round.rs  score.rs  seed.rs  set.rs  set_slot.rs  shop.rs  shop_level.rs  shop_order_message.rs  stage.rs  standing.rs  standing_stats.rs  stations.rs  stream.rs  stream_queue.rs  streams.rs  (+9 more)
