[package]
name = "ggapi"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "A library for communicating with start.gg's API."
homepage = "https://crates.io/crates/ggapi"
documentation = "https://docs.rs/ggapi/latest"
repository = "https://github.com/pyropm/ggapi"
readme = "README.md"

[dependencies]
chrono = "0.4.26"
gql_client = "1.0.7"
serde = "1.0.174"
